// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input components Color should match snapshot 1`] = `
<DocumentFragment>
  .c3 {
  --icon-size: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: var(--icon-size);
  height: var(--icon-size);
}

.c3 svg {
  width: 100%;
  height: 100%;
  max-width: var(--icon-size);
  max-height: var(--icon-size);
}

.c3.xs {
  width: calc(var(--icon-size) * .8);
  height: calc(var(--icon-size) * .8);
}

.c3.xs svg {
  max-width: calc(var(--icon-size) * .8);
  max-height: calc(var(--icon-size) * .8);
}

.c3.md {
  width: calc(var(--icon-size) * 2);
  height: calc(var(--icon-size) * 2);
}

.c3.md svg {
  max-width: calc(var(--icon-size) * 2);
  max-height: calc(var(--icon-size) * 2);
}

.c3.lg {
  width: calc(var(--icon-size) * 4);
  height: calc(var(--icon-size) * 4);
}

.c3.lg svg {
  max-width: calc(var(--icon-size) * 4);
  max-height: calc(var(--icon-size) * 4);
}

.c3.xl {
  width: calc(var(--icon-size) * 7);
  height: calc(var(--icon-size) * 7);
}

.c3.xl svg {
  max-width: calc(var(--icon-size) * 7);
  max-height: calc(var(--icon-size) * 7);
}

.c6 {
  position: absolute;
  top: 6px;
  z-index: 10;
  opacity: .5;
  font-size: var(--text-md);
  -webkit-transition: var(--transition);
  transition: var(--transition);
}

.c1 {
  --cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(0,0,0,.02);
  cursor: var(--cursor);
  width: 44px;
  min-width: 44px;
  min-height: 100%;
  color: var(--text-color);
  border-radius: calc(var(--radius) - 1px) 0 0 calc(var(--radius) - 1px);
  -webkit-transition: var(--transition);
  transition: var(--transition);
}

.c1 svg {
  width: 16px;
  height: 100%;
}

.c5 {
  position: relative;
  width: 100%;
}

.c0 {
  --border-radius: 0 var(--radius) var(--radius) 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-bottom: var(--space-xxl);
  border: var(--border);
  background-color: var(--element-bg-color);
  width: 100%;
  min-width: 240px;
  font-size: 1em;
  border-radius: var(--radius);
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  outline: none;
}

.c0 .input-label {
  position: absolute;
  top: .3rem;
  left: 0.8rem;
  z-index: 1;
  opacity: 0.5;
  color: var(--text-color);
  font-size: var(--text-xxs);
  font-weight: var(--font-weight-bd);
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform-origin: left;
  -ms-transform-origin: left;
  transform-origin: left;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.c0 input {
  position: relative;
  border: none;
  background: transparent;
  padding: var(--space-fixed-md) var(--space-fixed-md) 0 var(--space-fixed-md);
  width: 100%;
  height: 2.75rem;
  border-radius: var(--border-radius);
  color: var(--text-color);
  outline: none;
  -webkit-transition: top 200ms ease-in-out;
  transition: top 200ms ease-in-out;
}

.c0 input:disabled {
  cursor: not-allowed;
}

.c0 .error {
  position: absolute;
  right: 0;
  bottom: -1.5rem;
  padding: 0.125rem 0.25rem;
  text-align: right;
  color: var(--color-error);
  font-size: var(--text-xs);
}

.c0.empty label {
  -webkit-transform: scale(1.2);
  -ms-transform: scale(1.2);
  transform: scale(1.2);
  top: 1rem;
  left: 1rem;
}

.c0 .show-password {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  top: 0;
  right: 0;
  z-index: 10;
  border: none;
  background: transparent;
  cursor: pointer;
  width: 2.75rem;
  height: 2.75rem;
  outline: none;
}

.c0 .show-password:before {
  position: absolute;
  background-color: var(--color-white-50);
  width: 2px;
  height: 18px;
  content: '';
  border-radius: calc(var(--radius) / 2);
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  -webkit-transition: var(--transition);
  transition: var(--transition);
}

.c0 .show-password svg {
  color: var(--color-white-50);
  -webkit-transition: var(--transition);
  transition: var(--transition);
}

.c0 .show-password:hover svg {
  color: var(--color-white);
}

.c0 .show-password:hover:before {
  background-color: var(--color-white);
}

.c0 .show-password.dark svg {
  color: var(--color-black-50);
}

.c0 .show-password.dark:before {
  background-color: var(--color-black-50);
}

.c0 .show-password.dark:hover svg {
  color: var(--color-black);
}

.c0 .show-password.dark:hover:before {
  background-color: var(--color-black);
}

.c0 .show-password.active:before {
  background-color: transparent;
}

.c0 .show-password.dark.active:before {
  background-color: inherit;
}

.c0:hover .input-icon,
.c0.focus .input-icon,
.c0:focus-within .input-icon {
  background-color: var(--color-primary);
  color: var(--color-white-fix);
}

.c0:focus-within {
  border-color: var(--color-primary);
}

.c0:focus-within label {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  top: .3rem;
  left: 0.8rem;
}

.c4 {
  --bg-color: #000000;
  background-color: var(--bg-color);
  width: 1em;
  height: 1em;
  border-radius: 4px;
}

.c2 {
  position: absolute;
  top: .375rem;
  left: 1.3125rem;
  width: .9375rem;
  height: .9375rem;
}

<div
    class="c0 text-input   "
    id="colorWrapper"
  >
    <div
      class="c1 input-icon undefined"
    >
      <div
        class="c2"
      >
        <i
          class="c3 icon undefined sm"
        >
          <svg
            class="icon-pipette"
            height="15"
            viewBox="0 0 464.736 464.734"
            width="15"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              id="dropper"
              transform="translate(0 -0.001)"
            >
              <path
                d="M446.6,18.143a61.945,61.945,0,0,0-87.592-.008L342.289,34.852a22.984,22.984,0,0,0-32.5,32.5l5.416,5.419-180.588,180.6H134.6L71.912,316.068a28.211,28.211,0,0,0-8.235,18.684l-.15,3.344v.046L61,394.846a9.366,9.366,0,0,0,9.369,9.786c.135,0,.269,0,.42-.008l30.064-1.331h.016l18.318-.815,8.318-.366a36.993,36.993,0,0,0,24.469-10.776l240.9-240.891,4.506,4.505a22.985,22.985,0,0,0,32.505-32.505L446.6,105.727A61.933,61.933,0,0,0,446.6,18.143ZM272.639,227.33l-84.6,15.96,138-138L360.369,139.6Z"
                data-name="Pfad 1331"
                fill="currentColor"
                id="Pfad_1331"
              />
              <path
                d="M64.5,423.872c-35.617,0-64.5,9.145-64.5,20.435s28.883,20.428,64.5,20.428,64.486-9.143,64.486-20.428S100.117,423.872,64.5,423.872Z"
                data-name="Pfad 1332"
                fill="currentColor"
                id="Pfad_1332"
              />
            </g>
          </svg>
        </i>
      </div>
      <div
        class="c4"
        color="#000000"
      />
    </div>
    <div
      class="c5"
    >
      <label
        class="c6 input-label undefined"
        for="color"
      >
        Pick a color
      </label>
      <input
        autocomplete="off"
        class="input--undefined undefined"
        id="color"
        name="color"
        value="#000000"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input components Date should match snapshot 1`] = `
<DocumentFragment>
  .c3 {
  --icon-size: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: var(--icon-size);
  height: var(--icon-size);
}

.c3 svg {
  width: 100%;
  height: 100%;
  max-width: var(--icon-size);
  max-height: var(--icon-size);
}

.c3.xs {
  width: calc(var(--icon-size) * .8);
  height: calc(var(--icon-size) * .8);
}

.c3.xs svg {
  max-width: calc(var(--icon-size) * .8);
  max-height: calc(var(--icon-size) * .8);
}

.c3.md {
  width: calc(var(--icon-size) * 2);
  height: calc(var(--icon-size) * 2);
}

.c3.md svg {
  max-width: calc(var(--icon-size) * 2);
  max-height: calc(var(--icon-size) * 2);
}

.c3.lg {
  width: calc(var(--icon-size) * 4);
  height: calc(var(--icon-size) * 4);
}

.c3.lg svg {
  max-width: calc(var(--icon-size) * 4);
  max-height: calc(var(--icon-size) * 4);
}

.c3.xl {
  width: calc(var(--icon-size) * 7);
  height: calc(var(--icon-size) * 7);
}

.c3.xl svg {
  max-width: calc(var(--icon-size) * 7);
  max-height: calc(var(--icon-size) * 7);
}

.c6 {
  position: absolute;
  top: 6px;
  z-index: 10;
  opacity: .5;
  font-size: var(--text-md);
  -webkit-transition: var(--transition);
  transition: var(--transition);
}

.c2 {
  --cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(0,0,0,.02);
  cursor: var(--cursor);
  width: 44px;
  min-width: 44px;
  min-height: 100%;
  color: var(--text-color);
  border-radius: calc(var(--radius) - 1px) 0 0 calc(var(--radius) - 1px);
  -webkit-transition: var(--transition);
  transition: var(--transition);
}

.c2 svg {
  width: 16px;
  height: 100%;
}

.c4 {
  --cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(0,0,0,.02);
  cursor: var(--cursor);
  width: 44px;
  min-width: 44px;
  min-height: 100%;
  color: var(--text-color);
  border-radius: calc(var(--radius) - 1px) 0 0 calc(var(--radius) - 1px);
  -webkit-transition: var(--transition);
  transition: var(--transition);
}

.c4 svg {
  width: 16px;
  height: 100%;
}

.c5 {
  position: relative;
  width: 100%;
}

.c1 {
  --border-radius: 0 var(--radius) var(--radius) 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-bottom: var(--space-xxl);
  border: var(--border);
  background-color: var(--element-bg-color);
  width: 100%;
  min-width: 240px;
  font-size: 1em;
  border-radius: var(--radius);
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  outline: none;
}

.c1 .input-label {
  position: absolute;
  top: .3rem;
  left: 0.8rem;
  z-index: 1;
  opacity: 0.5;
  color: var(--text-color);
  font-size: var(--text-xxs);
  font-weight: var(--font-weight-bd);
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform-origin: left;
  -ms-transform-origin: left;
  transform-origin: left;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.c1 input {
  position: relative;
  border: none;
  background: transparent;
  padding: var(--space-fixed-md) var(--space-fixed-md) 0 var(--space-fixed-md);
  width: 100%;
  height: 2.75rem;
  border-radius: var(--border-radius);
  color: var(--text-color);
  outline: none;
  -webkit-transition: top 200ms ease-in-out;
  transition: top 200ms ease-in-out;
}

.c1 input:disabled {
  cursor: not-allowed;
}

.c1 .error {
  position: absolute;
  right: 0;
  bottom: -1.5rem;
  padding: 0.125rem 0.25rem;
  text-align: right;
  color: var(--color-error);
  font-size: var(--text-xs);
}

.c1.empty label {
  -webkit-transform: scale(1.2);
  -ms-transform: scale(1.2);
  transform: scale(1.2);
  top: 1rem;
  left: 1rem;
}

.c1 .show-password {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  top: 0;
  right: 0;
  z-index: 10;
  border: none;
  background: transparent;
  cursor: pointer;
  width: 2.75rem;
  height: 2.75rem;
  outline: none;
}

.c1 .show-password:before {
  position: absolute;
  background-color: var(--color-white-50);
  width: 2px;
  height: 18px;
  content: '';
  border-radius: calc(var(--radius) / 2);
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  -webkit-transition: var(--transition);
  transition: var(--transition);
}

.c1 .show-password svg {
  color: var(--color-white-50);
  -webkit-transition: var(--transition);
  transition: var(--transition);
}

.c1 .show-password:hover svg {
  color: var(--color-white);
}

.c1 .show-password:hover:before {
  background-color: var(--color-white);
}

.c1 .show-password.dark svg {
  color: var(--color-black-50);
}

.c1 .show-password.dark:before {
  background-color: var(--color-black-50);
}

.c1 .show-password.dark:hover svg {
  color: var(--color-black);
}

.c1 .show-password.dark:hover:before {
  background-color: var(--color-black);
}

.c1 .show-password.active:before {
  background-color: transparent;
}

.c1 .show-password.dark.active:before {
  background-color: inherit;
}

.c1:hover .input-icon,
.c1.focus .input-icon,
.c1:focus-within .input-icon {
  background-color: var(--color-primary);
  color: var(--color-white-fix);
}

.c1:focus-within {
  border-color: var(--color-primary);
}

.c1:focus-within label {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  top: .3rem;
  left: 0.8rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: none;
  width: 100%;
}

.c0 > div {
  width: 100%;
}

<div
    class="c0 date-input undefined"
  >
    <div
      class="c1 text-input focus empty "
      id="dateWrapper"
      style="margin-bottom: 0px;"
    >
      <div
        class="c2 input-icon undefined"
      >
        <i
          class="c3 icon undefined sm"
        >
          <svg
            height="12.647"
            viewBox="0 0 14.154 12.647"
            width="14.154"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              id="tag"
              transform="translate(0 -23.224)"
            >
              <g
                data-name="Gruppe 529"
                id="Gruppe_529"
                transform="translate(0 23.224)"
              >
                <g
                  data-name="Gruppe 528"
                  id="Gruppe_528"
                  transform="translate(0 0)"
                >
                  <path
                    d="M11.04,23.224H6.694a1.038,1.038,0,0,0-.734.3L.3,29.184a1.038,1.038,0,0,0,0,1.468L4.65,35a1.038,1.038,0,0,0,1.468,0l5.657-5.656a1.041,1.041,0,0,0,.3-.735V24.262A1.038,1.038,0,0,0,11.04,23.224ZM9.224,26.857A.778.778,0,1,1,10,26.078.779.779,0,0,1,9.224,26.857Z"
                    data-name="Pfad 300"
                    fill="currentColor"
                    id="Pfad_300"
                    transform="translate(0 -23.224)"
                  />
                </g>
              </g>
              <g
                data-name="Gruppe 531"
                id="Gruppe_531"
                transform="translate(7.103 24.262)"
              >
                <g
                  data-name="Gruppe 530"
                  id="Gruppe_530"
                  transform="translate(0 0)"
                >
                  <path
                    d="M225,55.224v4.831a.9.9,0,0,1-.265.638l-5.748,5.748.088.088a1.038,1.038,0,0,0,1.468,0l5.191-5.19a1.037,1.037,0,0,0,.3-.734V56.262A1.038,1.038,0,0,0,225,55.224Z"
                    data-name="Pfad 301"
                    fill="currentColor"
                    id="Pfad_301"
                    transform="translate(-218.988 -55.224)"
                  />
                </g>
              </g>
            </g>
          </svg>
        </i>
      </div>
      <div
        class="c4 input-icon undefined"
      >
        <i
          class="c3 icon undefined sm"
        >
          <svg
            height="19.001"
            viewBox="0 0 19.001 19.001"
            width="19.001"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              data-name="Gruppe 17032"
              id="Gruppe_17032"
              transform="translate(-797.999 -779.999)"
            >
              <g
                id="date"
                transform="translate(791.999 773.999)"
              >
                <path
                  d="M7.583,34.5H23.418A1.583,1.583,0,0,0,25,32.921V21.73H6V32.921A1.586,1.586,0,0,0,7.583,34.5Zm10.28-10.4a1.776,1.776,0,0,1,1.294.562,1.564,1.564,0,0,1,.424,1.184,5.617,5.617,0,0,1-1.849,2.894H19.36a.4.4,0,0,1,0,.792H16.688a.4.4,0,0,1-.249-.7c.625-.507,2.272-2.043,2.347-3.044a.774.774,0,0,0-.214-.586.985.985,0,0,0-.713-.309.927.927,0,0,0-.926.926.4.4,0,0,1-.792,0A1.724,1.724,0,0,1,17.864,24.105Zm-4.893,0a1.776,1.776,0,0,1,1.294.562,1.564,1.564,0,0,1,.424,1.184,5.6,5.6,0,0,1-1.853,2.894h1.627a.4.4,0,0,1,0,.792H11.8a.4.4,0,0,1-.249-.7c.625-.507,2.272-2.043,2.347-3.044a.774.774,0,0,0-.214-.586.985.985,0,0,0-.713-.309.927.927,0,0,0-.926.926.4.4,0,0,1-.792,0A1.716,1.716,0,0,1,12.971,24.105Z"
                  data-name="Pfad 15444"
                  fill="currentColor"
                  id="Pfad_15444"
                  transform="translate(0 -9.503)"
                />
                <path
                  d="M25,9.309a1.583,1.583,0,0,0-1.583-1.583H21.747V6.4a.4.4,0,0,0-.792,0v1.33H17.848V6.4a.4.4,0,1,0-.792,0v1.33H13.949V6.4a.4.4,0,0,0-.792,0v1.33H10.05V6.4a.4.4,0,1,0-.792,0v1.33H7.583A1.586,1.586,0,0,0,6,9.309v2.13H25Z"
                  data-name="Pfad 15445"
                  fill="currentColor"
                  id="Pfad_15445"
                  transform="translate(0 0)"
                />
              </g>
              <rect
                data-name="Rechteck 1912"
                fill="currentColor"
                height="9"
                id="Rechteck_1912"
                transform="translate(801 788)"
                width="13"
              />
            </g>
          </svg>
        </i>
      </div>
      <div
        class="c5"
      >
        <label
          class="c6 input-label undefined"
          for="date"
        >
          Pick a date
        </label>
        <input
          autocomplete="off"
          class="input--date undefined"
          id="date"
          name="date"
          type="date"
          value=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input components Email should match snapshot 1`] = `
<DocumentFragment>
  .c2 {
  --icon-size: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: var(--icon-size);
  height: var(--icon-size);
}

.c2 svg {
  width: 100%;
  height: 100%;
  max-width: var(--icon-size);
  max-height: var(--icon-size);
}

.c2.xs {
  width: calc(var(--icon-size) * .8);
  height: calc(var(--icon-size) * .8);
}

.c2.xs svg {
  max-width: calc(var(--icon-size) * .8);
  max-height: calc(var(--icon-size) * .8);
}

.c2.md {
  width: calc(var(--icon-size) * 2);
  height: calc(var(--icon-size) * 2);
}

.c2.md svg {
  max-width: calc(var(--icon-size) * 2);
  max-height: calc(var(--icon-size) * 2);
}

.c2.lg {
  width: calc(var(--icon-size) * 4);
  height: calc(var(--icon-size) * 4);
}

.c2.lg svg {
  max-width: calc(var(--icon-size) * 4);
  max-height: calc(var(--icon-size) * 4);
}

.c2.xl {
  width: calc(var(--icon-size) * 7);
  height: calc(var(--icon-size) * 7);
}

.c2.xl svg {
  max-width: calc(var(--icon-size) * 7);
  max-height: calc(var(--icon-size) * 7);
}

.c4 {
  position: absolute;
  top: 6px;
  z-index: 10;
  opacity: .5;
  font-size: var(--text-md);
  -webkit-transition: var(--transition);
  transition: var(--transition);
}

.c1 {
  --cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(0,0,0,.02);
  cursor: var(--cursor);
  width: 44px;
  min-width: 44px;
  min-height: 100%;
  color: var(--text-color);
  border-radius: calc(var(--radius) - 1px) 0 0 calc(var(--radius) - 1px);
  -webkit-transition: var(--transition);
  transition: var(--transition);
}

.c1 svg {
  width: 16px;
  height: 100%;
}

.c3 {
  position: relative;
  width: 100%;
}

.c0 {
  --border-radius: 0 var(--radius) var(--radius) 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-bottom: var(--space-xxl);
  border: var(--border);
  background-color: var(--element-bg-color);
  width: 100%;
  min-width: 240px;
  font-size: 1em;
  border-radius: var(--radius);
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  outline: none;
}

.c0 .input-label {
  position: absolute;
  top: .3rem;
  left: 0.8rem;
  z-index: 1;
  opacity: 0.5;
  color: var(--text-color);
  font-size: var(--text-xxs);
  font-weight: var(--font-weight-bd);
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform-origin: left;
  -ms-transform-origin: left;
  transform-origin: left;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.c0 input {
  position: relative;
  border: none;
  background: transparent;
  padding: var(--space-fixed-md) var(--space-fixed-md) 0 var(--space-fixed-md);
  width: 100%;
  height: 2.75rem;
  border-radius: var(--border-radius);
  color: var(--text-color);
  outline: none;
  -webkit-transition: top 200ms ease-in-out;
  transition: top 200ms ease-in-out;
}

.c0 input:disabled {
  cursor: not-allowed;
}

.c0 .error {
  position: absolute;
  right: 0;
  bottom: -1.5rem;
  padding: 0.125rem 0.25rem;
  text-align: right;
  color: var(--color-error);
  font-size: var(--text-xs);
}

.c0.empty label {
  -webkit-transform: scale(1.2);
  -ms-transform: scale(1.2);
  transform: scale(1.2);
  top: 1rem;
  left: 1rem;
}

.c0 .show-password {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  top: 0;
  right: 0;
  z-index: 10;
  border: none;
  background: transparent;
  cursor: pointer;
  width: 2.75rem;
  height: 2.75rem;
  outline: none;
}

.c0 .show-password:before {
  position: absolute;
  background-color: var(--color-white-50);
  width: 2px;
  height: 18px;
  content: '';
  border-radius: calc(var(--radius) / 2);
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  -webkit-transition: var(--transition);
  transition: var(--transition);
}

.c0 .show-password svg {
  color: var(--color-white-50);
  -webkit-transition: var(--transition);
  transition: var(--transition);
}

.c0 .show-password:hover svg {
  color: var(--color-white);
}

.c0 .show-password:hover:before {
  background-color: var(--color-white);
}

.c0 .show-password.dark svg {
  color: var(--color-black-50);
}

.c0 .show-password.dark:before {
  background-color: var(--color-black-50);
}

.c0 .show-password.dark:hover svg {
  color: var(--color-black);
}

.c0 .show-password.dark:hover:before {
  background-color: var(--color-black);
}

.c0 .show-password.active:before {
  background-color: transparent;
}

.c0 .show-password.dark.active:before {
  background-color: inherit;
}

.c0:hover .input-icon,
.c0.focus .input-icon,
.c0:focus-within .input-icon {
  background-color: var(--color-primary);
  color: var(--color-white-fix);
}

.c0:focus-within {
  border-color: var(--color-primary);
}

.c0:focus-within label {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  top: .3rem;
  left: 0.8rem;
}

<div
    class="c0 text-input focus empty "
    id="inputWrapper"
    style="margin-bottom: 0px;"
  >
    <div
      class="c1 input-icon undefined"
    >
      <i
        class="c2 icon undefined sm"
      >
        <svg
          height="12.647"
          viewBox="0 0 14.154 12.647"
          width="14.154"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="tag"
            transform="translate(0 -23.224)"
          >
            <g
              data-name="Gruppe 529"
              id="Gruppe_529"
              transform="translate(0 23.224)"
            >
              <g
                data-name="Gruppe 528"
                id="Gruppe_528"
                transform="translate(0 0)"
              >
                <path
                  d="M11.04,23.224H6.694a1.038,1.038,0,0,0-.734.3L.3,29.184a1.038,1.038,0,0,0,0,1.468L4.65,35a1.038,1.038,0,0,0,1.468,0l5.657-5.656a1.041,1.041,0,0,0,.3-.735V24.262A1.038,1.038,0,0,0,11.04,23.224ZM9.224,26.857A.778.778,0,1,1,10,26.078.779.779,0,0,1,9.224,26.857Z"
                  data-name="Pfad 300"
                  fill="currentColor"
                  id="Pfad_300"
                  transform="translate(0 -23.224)"
                />
              </g>
            </g>
            <g
              data-name="Gruppe 531"
              id="Gruppe_531"
              transform="translate(7.103 24.262)"
            >
              <g
                data-name="Gruppe 530"
                id="Gruppe_530"
                transform="translate(0 0)"
              >
                <path
                  d="M225,55.224v4.831a.9.9,0,0,1-.265.638l-5.748,5.748.088.088a1.038,1.038,0,0,0,1.468,0l5.191-5.19a1.037,1.037,0,0,0,.3-.734V56.262A1.038,1.038,0,0,0,225,55.224Z"
                  data-name="Pfad 301"
                  fill="currentColor"
                  id="Pfad_301"
                  transform="translate(-218.988 -55.224)"
                />
              </g>
            </g>
          </g>
        </svg>
      </i>
    </div>
    <div
      class="c3"
    >
      <label
        class="c4 input-label undefined"
        for="input"
      >
        Label
      </label>
      <input
        autocomplete="off"
        class="input--email undefined"
        id="input"
        name="input"
        type="email"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input components Number should match snapshot 1`] = `
<DocumentFragment>
  .c2 {
  --icon-size: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: var(--icon-size);
  height: var(--icon-size);
}

.c2 svg {
  width: 100%;
  height: 100%;
  max-width: var(--icon-size);
  max-height: var(--icon-size);
}

.c2.xs {
  width: calc(var(--icon-size) * .8);
  height: calc(var(--icon-size) * .8);
}

.c2.xs svg {
  max-width: calc(var(--icon-size) * .8);
  max-height: calc(var(--icon-size) * .8);
}

.c2.md {
  width: calc(var(--icon-size) * 2);
  height: calc(var(--icon-size) * 2);
}

.c2.md svg {
  max-width: calc(var(--icon-size) * 2);
  max-height: calc(var(--icon-size) * 2);
}

.c2.lg {
  width: calc(var(--icon-size) * 4);
  height: calc(var(--icon-size) * 4);
}

.c2.lg svg {
  max-width: calc(var(--icon-size) * 4);
  max-height: calc(var(--icon-size) * 4);
}

.c2.xl {
  width: calc(var(--icon-size) * 7);
  height: calc(var(--icon-size) * 7);
}

.c2.xl svg {
  max-width: calc(var(--icon-size) * 7);
  max-height: calc(var(--icon-size) * 7);
}

.c4 {
  position: absolute;
  top: 6px;
  z-index: 10;
  opacity: .5;
  font-size: var(--text-md);
  -webkit-transition: var(--transition);
  transition: var(--transition);
}

.c1 {
  --cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(0,0,0,.02);
  cursor: var(--cursor);
  width: 44px;
  min-width: 44px;
  min-height: 100%;
  color: var(--text-color);
  border-radius: calc(var(--radius) - 1px) 0 0 calc(var(--radius) - 1px);
  -webkit-transition: var(--transition);
  transition: var(--transition);
}

.c1 svg {
  width: 16px;
  height: 100%;
}

.c3 {
  position: relative;
  width: 100%;
}

.c0 {
  --border-radius: 0 var(--radius) var(--radius) 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-bottom: var(--space-xxl);
  border: var(--border);
  background-color: var(--element-bg-color);
  width: 100%;
  min-width: 240px;
  font-size: 1em;
  border-radius: var(--radius);
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  outline: none;
}

.c0 .input-label {
  position: absolute;
  top: .3rem;
  left: 0.8rem;
  z-index: 1;
  opacity: 0.5;
  color: var(--text-color);
  font-size: var(--text-xxs);
  font-weight: var(--font-weight-bd);
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform-origin: left;
  -ms-transform-origin: left;
  transform-origin: left;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.c0 input {
  position: relative;
  border: none;
  background: transparent;
  padding: var(--space-fixed-md) var(--space-fixed-md) 0 var(--space-fixed-md);
  width: 100%;
  height: 2.75rem;
  border-radius: var(--border-radius);
  color: var(--text-color);
  outline: none;
  -webkit-transition: top 200ms ease-in-out;
  transition: top 200ms ease-in-out;
}

.c0 input:disabled {
  cursor: not-allowed;
}

.c0 .error {
  position: absolute;
  right: 0;
  bottom: -1.5rem;
  padding: 0.125rem 0.25rem;
  text-align: right;
  color: var(--color-error);
  font-size: var(--text-xs);
}

.c0.empty label {
  -webkit-transform: scale(1.2);
  -ms-transform: scale(1.2);
  transform: scale(1.2);
  top: 1rem;
  left: 1rem;
}

.c0 .show-password {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  top: 0;
  right: 0;
  z-index: 10;
  border: none;
  background: transparent;
  cursor: pointer;
  width: 2.75rem;
  height: 2.75rem;
  outline: none;
}

.c0 .show-password:before {
  position: absolute;
  background-color: var(--color-white-50);
  width: 2px;
  height: 18px;
  content: '';
  border-radius: calc(var(--radius) / 2);
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  -webkit-transition: var(--transition);
  transition: var(--transition);
}

.c0 .show-password svg {
  color: var(--color-white-50);
  -webkit-transition: var(--transition);
  transition: var(--transition);
}

.c0 .show-password:hover svg {
  color: var(--color-white);
}

.c0 .show-password:hover:before {
  background-color: var(--color-white);
}

.c0 .show-password.dark svg {
  color: var(--color-black-50);
}

.c0 .show-password.dark:before {
  background-color: var(--color-black-50);
}

.c0 .show-password.dark:hover svg {
  color: var(--color-black);
}

.c0 .show-password.dark:hover:before {
  background-color: var(--color-black);
}

.c0 .show-password.active:before {
  background-color: transparent;
}

.c0 .show-password.dark.active:before {
  background-color: inherit;
}

.c0:hover .input-icon,
.c0.focus .input-icon,
.c0:focus-within .input-icon {
  background-color: var(--color-primary);
  color: var(--color-white-fix);
}

.c0:focus-within {
  border-color: var(--color-primary);
}

.c0:focus-within label {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  top: .3rem;
  left: 0.8rem;
}

<div
    class="c0 text-input focus empty "
    id="inputWrapper"
    style="margin-bottom: 0px;"
  >
    <div
      class="c1 input-icon undefined"
    >
      <i
        class="c2 icon undefined sm"
      >
        <svg
          height="12.647"
          viewBox="0 0 14.154 12.647"
          width="14.154"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="tag"
            transform="translate(0 -23.224)"
          >
            <g
              data-name="Gruppe 529"
              id="Gruppe_529"
              transform="translate(0 23.224)"
            >
              <g
                data-name="Gruppe 528"
                id="Gruppe_528"
                transform="translate(0 0)"
              >
                <path
                  d="M11.04,23.224H6.694a1.038,1.038,0,0,0-.734.3L.3,29.184a1.038,1.038,0,0,0,0,1.468L4.65,35a1.038,1.038,0,0,0,1.468,0l5.657-5.656a1.041,1.041,0,0,0,.3-.735V24.262A1.038,1.038,0,0,0,11.04,23.224ZM9.224,26.857A.778.778,0,1,1,10,26.078.779.779,0,0,1,9.224,26.857Z"
                  data-name="Pfad 300"
                  fill="currentColor"
                  id="Pfad_300"
                  transform="translate(0 -23.224)"
                />
              </g>
            </g>
            <g
              data-name="Gruppe 531"
              id="Gruppe_531"
              transform="translate(7.103 24.262)"
            >
              <g
                data-name="Gruppe 530"
                id="Gruppe_530"
                transform="translate(0 0)"
              >
                <path
                  d="M225,55.224v4.831a.9.9,0,0,1-.265.638l-5.748,5.748.088.088a1.038,1.038,0,0,0,1.468,0l5.191-5.19a1.037,1.037,0,0,0,.3-.734V56.262A1.038,1.038,0,0,0,225,55.224Z"
                  data-name="Pfad 301"
                  fill="currentColor"
                  id="Pfad_301"
                  transform="translate(-218.988 -55.224)"
                />
              </g>
            </g>
          </g>
        </svg>
      </i>
    </div>
    <div
      class="c3"
    >
      <label
        class="c4 input-label undefined"
        for="input"
      >
        Label
      </label>
      <input
        autocomplete="off"
        class="input--number undefined"
        id="input"
        name="input"
        type="number"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input components Password should match snapshot 1`] = `
<DocumentFragment>
  .c2 {
  --icon-size: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: var(--icon-size);
  height: var(--icon-size);
}

.c2 svg {
  width: 100%;
  height: 100%;
  max-width: var(--icon-size);
  max-height: var(--icon-size);
}

.c2.xs {
  width: calc(var(--icon-size) * .8);
  height: calc(var(--icon-size) * .8);
}

.c2.xs svg {
  max-width: calc(var(--icon-size) * .8);
  max-height: calc(var(--icon-size) * .8);
}

.c2.md {
  width: calc(var(--icon-size) * 2);
  height: calc(var(--icon-size) * 2);
}

.c2.md svg {
  max-width: calc(var(--icon-size) * 2);
  max-height: calc(var(--icon-size) * 2);
}

.c2.lg {
  width: calc(var(--icon-size) * 4);
  height: calc(var(--icon-size) * 4);
}

.c2.lg svg {
  max-width: calc(var(--icon-size) * 4);
  max-height: calc(var(--icon-size) * 4);
}

.c2.xl {
  width: calc(var(--icon-size) * 7);
  height: calc(var(--icon-size) * 7);
}

.c2.xl svg {
  max-width: calc(var(--icon-size) * 7);
  max-height: calc(var(--icon-size) * 7);
}

.c4 {
  position: absolute;
  top: 6px;
  z-index: 10;
  opacity: .5;
  font-size: var(--text-md);
  -webkit-transition: var(--transition);
  transition: var(--transition);
}

.c1 {
  --cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(0,0,0,.02);
  cursor: var(--cursor);
  width: 44px;
  min-width: 44px;
  min-height: 100%;
  color: var(--text-color);
  border-radius: calc(var(--radius) - 1px) 0 0 calc(var(--radius) - 1px);
  -webkit-transition: var(--transition);
  transition: var(--transition);
}

.c1 svg {
  width: 16px;
  height: 100%;
}

.c3 {
  position: relative;
  width: 100%;
}

.c0 {
  --border-radius: 0 var(--radius) var(--radius) 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-bottom: var(--space-xxl);
  border: var(--border);
  background-color: var(--element-bg-color);
  width: 100%;
  min-width: 240px;
  font-size: 1em;
  border-radius: var(--radius);
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  outline: none;
}

.c0 .input-label {
  position: absolute;
  top: .3rem;
  left: 0.8rem;
  z-index: 1;
  opacity: 0.5;
  color: var(--text-color);
  font-size: var(--text-xxs);
  font-weight: var(--font-weight-bd);
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform-origin: left;
  -ms-transform-origin: left;
  transform-origin: left;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.c0 input {
  position: relative;
  border: none;
  background: transparent;
  padding: var(--space-fixed-md) var(--space-fixed-md) 0 var(--space-fixed-md);
  width: 100%;
  height: 2.75rem;
  border-radius: var(--border-radius);
  color: var(--text-color);
  outline: none;
  -webkit-transition: top 200ms ease-in-out;
  transition: top 200ms ease-in-out;
}

.c0 input:disabled {
  cursor: not-allowed;
}

.c0 .error {
  position: absolute;
  right: 0;
  bottom: -1.5rem;
  padding: 0.125rem 0.25rem;
  text-align: right;
  color: var(--color-error);
  font-size: var(--text-xs);
}

.c0.empty label {
  -webkit-transform: scale(1.2);
  -ms-transform: scale(1.2);
  transform: scale(1.2);
  top: 1rem;
  left: 1rem;
}

.c0 .show-password {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  top: 0;
  right: 0;
  z-index: 10;
  border: none;
  background: transparent;
  cursor: pointer;
  width: 2.75rem;
  height: 2.75rem;
  outline: none;
}

.c0 .show-password:before {
  position: absolute;
  background-color: var(--color-white-50);
  width: 2px;
  height: 18px;
  content: '';
  border-radius: calc(var(--radius) / 2);
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  -webkit-transition: var(--transition);
  transition: var(--transition);
}

.c0 .show-password svg {
  color: var(--color-white-50);
  -webkit-transition: var(--transition);
  transition: var(--transition);
}

.c0 .show-password:hover svg {
  color: var(--color-white);
}

.c0 .show-password:hover:before {
  background-color: var(--color-white);
}

.c0 .show-password.dark svg {
  color: var(--color-black-50);
}

.c0 .show-password.dark:before {
  background-color: var(--color-black-50);
}

.c0 .show-password.dark:hover svg {
  color: var(--color-black);
}

.c0 .show-password.dark:hover:before {
  background-color: var(--color-black);
}

.c0 .show-password.active:before {
  background-color: transparent;
}

.c0 .show-password.dark.active:before {
  background-color: inherit;
}

.c0:hover .input-icon,
.c0.focus .input-icon,
.c0:focus-within .input-icon {
  background-color: var(--color-primary);
  color: var(--color-white-fix);
}

.c0:focus-within {
  border-color: var(--color-primary);
}

.c0:focus-within label {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  top: .3rem;
  left: 0.8rem;
}

<div
    class="c0 text-input focus empty "
    id="passwordWrapper"
    style="margin-bottom: 0px;"
  >
    <div
      class="c1 input-icon undefined"
    >
      <i
        class="c2 icon undefined sm"
      >
        <svg
          height="12.647"
          viewBox="0 0 14.154 12.647"
          width="14.154"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="tag"
            transform="translate(0 -23.224)"
          >
            <g
              data-name="Gruppe 529"
              id="Gruppe_529"
              transform="translate(0 23.224)"
            >
              <g
                data-name="Gruppe 528"
                id="Gruppe_528"
                transform="translate(0 0)"
              >
                <path
                  d="M11.04,23.224H6.694a1.038,1.038,0,0,0-.734.3L.3,29.184a1.038,1.038,0,0,0,0,1.468L4.65,35a1.038,1.038,0,0,0,1.468,0l5.657-5.656a1.041,1.041,0,0,0,.3-.735V24.262A1.038,1.038,0,0,0,11.04,23.224ZM9.224,26.857A.778.778,0,1,1,10,26.078.779.779,0,0,1,9.224,26.857Z"
                  data-name="Pfad 300"
                  fill="currentColor"
                  id="Pfad_300"
                  transform="translate(0 -23.224)"
                />
              </g>
            </g>
            <g
              data-name="Gruppe 531"
              id="Gruppe_531"
              transform="translate(7.103 24.262)"
            >
              <g
                data-name="Gruppe 530"
                id="Gruppe_530"
                transform="translate(0 0)"
              >
                <path
                  d="M225,55.224v4.831a.9.9,0,0,1-.265.638l-5.748,5.748.088.088a1.038,1.038,0,0,0,1.468,0l5.191-5.19a1.037,1.037,0,0,0,.3-.734V56.262A1.038,1.038,0,0,0,225,55.224Z"
                  data-name="Pfad 301"
                  fill="currentColor"
                  id="Pfad_301"
                  transform="translate(-218.988 -55.224)"
                />
              </g>
            </g>
          </g>
        </svg>
      </i>
    </div>
    <div
      class="c3"
    >
      <label
        class="c4 input-label undefined"
        for="password"
      >
        Label
      </label>
      <input
        autocomplete="off"
        class="input--password undefined"
        id="password"
        name="password"
        type="password"
        value=""
      />
      <button
        class="show-password false light"
        type="button"
      >
        <i
          class="c2 icon undefined sm"
        >
          <svg
            height="6.653"
            viewBox="0 0 11.161 6.653"
            width="11.161"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              data-name="eye (2)"
              id="eye_2_"
              transform="translate(0 -98.725)"
            >
              <path
                d="M5.58,98.725a6.962,6.962,0,0,0-5.493,3.062.442.442,0,0,0,0,.527,6.959,6.959,0,0,0,5.493,3.064,6.962,6.962,0,0,0,5.493-3.062.442.442,0,0,0,0-.527A6.959,6.959,0,0,0,5.58,98.725Zm.153,5.669A2.347,2.347,0,1,1,7.923,102.2,2.349,2.349,0,0,1,5.733,104.394Zm-.071-1.082a1.264,1.264,0,1,1,1.18-1.18A1.262,1.262,0,0,1,5.663,103.312Z"
                data-name="Pfad 531"
                fill="currentColor"
                id="Pfad_531"
                transform="translate(0 0)"
              />
            </g>
          </svg>
        </i>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Input components Text should match snapshot 1`] = `
<DocumentFragment>
  .c2 {
  --icon-size: 1rem;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: var(--icon-size);
  height: var(--icon-size);
}

.c2 svg {
  width: 100%;
  height: 100%;
  max-width: var(--icon-size);
  max-height: var(--icon-size);
}

.c2.xs {
  width: calc(var(--icon-size) * .8);
  height: calc(var(--icon-size) * .8);
}

.c2.xs svg {
  max-width: calc(var(--icon-size) * .8);
  max-height: calc(var(--icon-size) * .8);
}

.c2.md {
  width: calc(var(--icon-size) * 2);
  height: calc(var(--icon-size) * 2);
}

.c2.md svg {
  max-width: calc(var(--icon-size) * 2);
  max-height: calc(var(--icon-size) * 2);
}

.c2.lg {
  width: calc(var(--icon-size) * 4);
  height: calc(var(--icon-size) * 4);
}

.c2.lg svg {
  max-width: calc(var(--icon-size) * 4);
  max-height: calc(var(--icon-size) * 4);
}

.c2.xl {
  width: calc(var(--icon-size) * 7);
  height: calc(var(--icon-size) * 7);
}

.c2.xl svg {
  max-width: calc(var(--icon-size) * 7);
  max-height: calc(var(--icon-size) * 7);
}

.c4 {
  position: absolute;
  top: 6px;
  z-index: 10;
  opacity: .5;
  font-size: var(--text-md);
  -webkit-transition: var(--transition);
  transition: var(--transition);
}

.c1 {
  --cursor: default;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: rgba(0,0,0,.02);
  cursor: var(--cursor);
  width: 44px;
  min-width: 44px;
  min-height: 100%;
  color: var(--text-color);
  border-radius: calc(var(--radius) - 1px) 0 0 calc(var(--radius) - 1px);
  -webkit-transition: var(--transition);
  transition: var(--transition);
}

.c1 svg {
  width: 16px;
  height: 100%;
}

.c3 {
  position: relative;
  width: 100%;
}

.c0 {
  --border-radius: 0 var(--radius) var(--radius) 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  margin-bottom: var(--space-xxl);
  border: var(--border);
  background-color: var(--element-bg-color);
  width: 100%;
  min-width: 240px;
  font-size: 1em;
  border-radius: var(--radius);
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  outline: none;
}

.c0 .input-label {
  position: absolute;
  top: .3rem;
  left: 0.8rem;
  z-index: 1;
  opacity: 0.5;
  color: var(--text-color);
  font-size: var(--text-xxs);
  font-weight: var(--font-weight-bd);
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform-origin: left;
  -ms-transform-origin: left;
  transform-origin: left;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.c0 input {
  position: relative;
  border: none;
  background: transparent;
  padding: var(--space-fixed-md) var(--space-fixed-md) 0 var(--space-fixed-md);
  width: 100%;
  height: 2.75rem;
  border-radius: var(--border-radius);
  color: var(--text-color);
  outline: none;
  -webkit-transition: top 200ms ease-in-out;
  transition: top 200ms ease-in-out;
}

.c0 input:disabled {
  cursor: not-allowed;
}

.c0 .error {
  position: absolute;
  right: 0;
  bottom: -1.5rem;
  padding: 0.125rem 0.25rem;
  text-align: right;
  color: var(--color-error);
  font-size: var(--text-xs);
}

.c0.empty label {
  -webkit-transform: scale(1.2);
  -ms-transform: scale(1.2);
  transform: scale(1.2);
  top: 1rem;
  left: 1rem;
}

.c0 .show-password {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: absolute;
  top: 0;
  right: 0;
  z-index: 10;
  border: none;
  background: transparent;
  cursor: pointer;
  width: 2.75rem;
  height: 2.75rem;
  outline: none;
}

.c0 .show-password:before {
  position: absolute;
  background-color: var(--color-white-50);
  width: 2px;
  height: 18px;
  content: '';
  border-radius: calc(var(--radius) / 2);
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  -webkit-transition: var(--transition);
  transition: var(--transition);
}

.c0 .show-password svg {
  color: var(--color-white-50);
  -webkit-transition: var(--transition);
  transition: var(--transition);
}

.c0 .show-password:hover svg {
  color: var(--color-white);
}

.c0 .show-password:hover:before {
  background-color: var(--color-white);
}

.c0 .show-password.dark svg {
  color: var(--color-black-50);
}

.c0 .show-password.dark:before {
  background-color: var(--color-black-50);
}

.c0 .show-password.dark:hover svg {
  color: var(--color-black);
}

.c0 .show-password.dark:hover:before {
  background-color: var(--color-black);
}

.c0 .show-password.active:before {
  background-color: transparent;
}

.c0 .show-password.dark.active:before {
  background-color: inherit;
}

.c0:hover .input-icon,
.c0.focus .input-icon,
.c0:focus-within .input-icon {
  background-color: var(--color-primary);
  color: var(--color-white-fix);
}

.c0:focus-within {
  border-color: var(--color-primary);
}

.c0:focus-within label {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  top: .3rem;
  left: 0.8rem;
}

<div
    class="c0 text-input focus empty "
    id="inputWrapper"
    style="margin-bottom: 0px;"
  >
    <div
      class="c1 input-icon undefined"
    >
      <i
        class="c2 icon undefined sm"
      >
        <svg
          height="12.647"
          viewBox="0 0 14.154 12.647"
          width="14.154"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="tag"
            transform="translate(0 -23.224)"
          >
            <g
              data-name="Gruppe 529"
              id="Gruppe_529"
              transform="translate(0 23.224)"
            >
              <g
                data-name="Gruppe 528"
                id="Gruppe_528"
                transform="translate(0 0)"
              >
                <path
                  d="M11.04,23.224H6.694a1.038,1.038,0,0,0-.734.3L.3,29.184a1.038,1.038,0,0,0,0,1.468L4.65,35a1.038,1.038,0,0,0,1.468,0l5.657-5.656a1.041,1.041,0,0,0,.3-.735V24.262A1.038,1.038,0,0,0,11.04,23.224ZM9.224,26.857A.778.778,0,1,1,10,26.078.779.779,0,0,1,9.224,26.857Z"
                  data-name="Pfad 300"
                  fill="currentColor"
                  id="Pfad_300"
                  transform="translate(0 -23.224)"
                />
              </g>
            </g>
            <g
              data-name="Gruppe 531"
              id="Gruppe_531"
              transform="translate(7.103 24.262)"
            >
              <g
                data-name="Gruppe 530"
                id="Gruppe_530"
                transform="translate(0 0)"
              >
                <path
                  d="M225,55.224v4.831a.9.9,0,0,1-.265.638l-5.748,5.748.088.088a1.038,1.038,0,0,0,1.468,0l5.191-5.19a1.037,1.037,0,0,0,.3-.734V56.262A1.038,1.038,0,0,0,225,55.224Z"
                  data-name="Pfad 301"
                  fill="currentColor"
                  id="Pfad_301"
                  transform="translate(-218.988 -55.224)"
                />
              </g>
            </g>
          </g>
        </svg>
      </i>
    </div>
    <div
      class="c3"
    >
      <label
        class="c4 input-label undefined"
        for="input"
      >
        Label
      </label>
      <input
        autocomplete="off"
        class="input--text undefined"
        id="input"
        name="input"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;
